Revert "✨ feat(backend): add username change, soft-delete account, and restore APIs"
This reverts commit de95e319cbd1b1df3cd8e293c45aea2cd3b298ad.
